# telegrab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/telegrab-fetch/: SKILL.md
.codex/skills/telegrab-fetch/agents/: openai.yaml
.codex/skills/telegrab-fetch/scripts/: run_telegrab.sh
src/telegrab/: __init__.py  __main__.py  cli.py  config.py  downloader.py  introspection.py  link_parser.py  models.py  telegram_client.py  validation.py
tests/: test_cli.py  test_downloader.py  test_integration.py  test_introspection.py  test_link_parser.py
